--- a/index.html
+++ b/index.html
@@ -4,16 +4,298 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Flower Shop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+    <title>EM Online Flower Shop</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon/favicon.png" type="image/x-icon">
 </head>
-<header></header>
-<main></main>
-<footer>
-
-</footer>
 
 <body>
+
+    <!-- ===============This code is not responsive yet. :( For better result use 18" monitor================= -->
+
+    <header>
+        <!------------------- This is Banner Section  ------------------->
+
+        <section class="banner-section">
+
+            <div class="banner-container">
+
+                <div class="banner-text-area">
+
+                    <h1 class="banner-title title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
+                    <p class="description banner-description">It is a long established fact that a reader will be
+                        distracted by the readable content of a page when looking at its layout. The point of using
+                        Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                    <button class=" banner-btn btn">Shop Now</button>
+
+                </div>
+
+                <div class="banner-image-area">
+
+                    <img class="banner-photo" src="assets/images/banner.png" alt="Banner Photo">
+
+                </div>
+
+            </div>
+
+        </section>
+
+    </header>
+
+
+    <main>
+        <!------------------- This is Featured Flowers(F-F) Section  ------------------->
+
+        <section class="featured-flowers-section">
+
+            <div class="f-f-container">
+
+                <div class="f-f-text-area">
+
+                    <h1 class="f-f-title title">Our Featured Flowers</h1>.
+                    <p class="description f-f-description ">It is a long established fact that a reader will be
+                        distracted by the readable content of a page when looking at its layout.</p>
+
+                </div>
+
+                <div class="f-f-images-area">
+
+                    <div class="f-f-image-text">
+
+                        <img class="f-f-photo f-f-photo-1" src="assets/images/feature-flw-1.png"
+                            alt="Featured Flower Photo">
+                        <h4 class="f-f-image-title">Tulip Flower Tree</h4>
+
+                    </div>
+
+                    <div class="f-f-image-text">
+
+                        <img class="f-f-photo f-f-photo-2" src="assets/images/feature-flw-2.png"
+                            alt="Featured Flower Photo">
+                        <h4 class="f-f-image-title">Sun Flower Tree</h4>
+
+                    </div>
+
+                    <div class="f-f-image-text">
+
+                        <img class="f-f-photo f-f-photo-3" src="assets/images/feature-flw-3.png"
+                            alt="Featured Flower Photo">
+                        <h4 class="f-f-image-title">Yellow Flower Tree</h4>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <!------------------- This is Delivery Local Support(D-L-S) Section  ------------------->
+
+        <section class="delivery-local-support-section">
+
+            <div class="d-l-s-container">
+
+                <div class="d-l-s-icons">
+
+                    <img class="d-l-s-icon" src="assets/images/icon/delivery-man-1.svg" alt="Same Day Delivery Icon">
+                    <p class="d-l-s-description description">Same Day Delivery. Click & Collect.</p>
+
+                </div>
+
+                <div class="d-l-s-icons">
+
+                    <img class="d-l-s-icon" src="assets/images/icon/flower-2.svg"
+                        alt="Fresh Flowers. Local Growers Icon">
+                    <p class="d-l-s-description description">Fresh Flowers. Local Growers.</p>
+
+                </div>
+
+                <div class="d-l-s-icons">
+
+                    <img class="d-l-s-icon" src="assets/images/icon/customer-service-3.svg" alt="24/7 Free Support">
+                    <p class="d-l-s-description description">24/7 Free Support.</p>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <!------------------- This is Hot Deal(H-D) Section  ------------------->
+
+        <section class="hot-deal-section">
+
+            <div class="h-d-container">
+
+                <div class="h-d-text-area">
+
+                    <h1 class="h-d-title title"> Hot Deal ! Sale Up To 25% <span class="color">Off</span> </h1>
+                    <p class="h-d-description description">It is a long established fact that a reader will be
+                        distracted by the readable content of a page when looking at its layout.</p>
+                    <button class="btn">Sign Up</button>
+
+                </div>
+
+                <div class="h-d-images">
+
+                    <img class="h-d-photo" src="assets/images/hot-deal.png" alt="Hot Deal Background Image">
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <!------------------- This is Instagram(Insta) Section  ------------------->
+
+        <section class="instagram-section">
+
+            <div class="insta-container">
+
+                <div class="insta-text-area">
+
+                    <h1 class="insta-title title">Instagram</h1>
+                    <p class=" description">It is a long established fact that a reader will be distracted by the
+                        readable content of a page when looking at its layout.</p>
+
+                </div>
+
+                <div class="insta-images">
+
+                    <img src="assets/images/instagram-1.png" alt="Instagram Photo" class="insta-photo">
+                    <img src="assets/images/instagram-2.png" alt="Instagram Photo" class="insta-photo">
+                    <img src="assets/images/instagram-3.png" alt="Instagram Photo" class="insta-photo">
+                    <img src="assets/images/instagram-4.png" alt="Instagram Photo" class="insta-photo">
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <!------------------- This is Latest Deals(L-D) Section  ------------------->
+
+        <section class="latest-deals-section">
+
+            <div class="l-d-container">
+
+                <div class="l-d-texts">
+
+                    <h1 class="title">Get The Latest Deals</h1>
+                    <p class="l-d-description description">$30 coupon for first shopping</p>
+
+                </div>
+
+                <div class="subscribe-area">
+
+                    <label for="email">
+                        <input class="email" type="email" placeholder="Enter your email here....">
+                    </label>
+
+                    <button class="l-d-btn btn">Subscribe</button>
+
+                </div>
+
+            </div>
+
+        </section>
+
+
+
+        <!------------------- This is Customer Review(C-R) Section  ------------------->
+
+        <section class="customer-review-section">
+
+            <h2 class="c-r-title title">Our Customer Review</h2>
+
+            <div class="c-r-all-content-container">
+
+                <div class="c-r-main-container">
+
+
+                    <div class="c-r-card-container">
+
+                        <img class="c-r-image" src="assets/images/customer-1.jpg" alt="Customer Photo">
+                        <h3 class="c-r-name">Eleanor Crisp</h3>
+                        <p class="c-r-profession">UX Designer</p>
+
+                        <div class="white-bg">
+                            <img class="c-r-comment-icon" src="assets/images/icon/comment-icon.png" alt="comment-icon">
+                            <p class="c-r-comment-description">Dad buried in landslide! Jubilant throngs fill streets!
+                                Stunned father inconsolable - demands recount!</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="c-r-main-container">
+
+
+                    <div class="c-r-card-container">
+
+                        <img class="c-r-image" src="assets/images/customer-2.jpg" alt="Customer Photo">
+                        <h3 class="c-r-name">Gordon Norman</h3>
+                        <p class="c-r-profession">Accountant</p>
+
+                        <div class="white-bg">
+                            <img class="c-r-comment-icon" src="assets/images/icon/comment-icon.png" alt="comment-icon">
+                            <p class="c-r-comment-description">Wormwood : Calvin, how about you? Calvin : Hard to say
+                                ma'am. I think my cerebellum has just fused.</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="c-r-main-container">
+
+
+                    <div class="c-r-card-container">
+
+                        <img class="c-r-image" src="assets/images/customar-3.jpg" alt="Customer Photo">
+                        <h3 class="c-r-name">Sue Shei</h3>
+                        <p class="c-r-profession">Public Relations</p>
+
+                        <div class="white-bg">
+                            <img class="c-r-comment-icon" src="assets/images/icon/comment-icon.png" alt="comment-icon">
+                            <p class="c-r-comment-description">The strength to change what I can, the inability to
+                                accept what I can't and the incapacity to tell the difference.</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+            </div>
+
+        </section>
+
+    </main>
+
+
+    <footer>
+        <!------------------- This is Footer Section  ------------------->
+
+        <section class="footer-section">
+
+            <div class="footer-container">
+
+                <h1 class="footer-title title"> <span class="color">Flower</span>Shop</h1>
+                <p class="footer-description description">It is a long established fact that a reader will be distracted
+                    by the readable content of a page when looking at its layout.</p>
+                <small class="copyright"> &copy 2020-2023, FlowerShop.com. All rights reserved. </small>
+
+            </div>
+
+        </section>
+
+    </footer>
 
 </body>
 
