--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <body>
 
-    <!-- ===============This code is not responsive yet. :( For better result use 18" monitor================= -->
+
 
     <header>
-        <!------------------- This is Banner Section  ------------------->
+        <!---Banner Section  ------->
 
         <section class="banner-section">
 
@@ -47,7 +47,6 @@
 
 
     <main>
-        <!------------------- This is Featured Flowers(F-F) Section  ------------------->
 
         <section class="featured-flowers-section">
 
