--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
     <main>
-
+        <!-- Flower section -->
         <section class="featured-flowers-section">
 
             <div class="f-f-container">
@@ -92,8 +92,7 @@
 
         </section>
 
-        <!------------------- This is Delivery Local Support(D-L-S) Section  ------------------->
-
+        <!-- Delivery Section -->
         <section class="delivery-local-support-section">
 
             <div class="d-l-s-container">
