--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         </section>
 
-        <!------------------- This is Hot Deal(H-D) Section  ------------------->
+
 
         <section class="hot-deal-section">
 
@@ -148,7 +148,6 @@
 
         </section>
 
-        <!------------------- This is Instagram(Insta) Section  ------------------->
 
         <section class="instagram-section">
 
@@ -175,7 +174,7 @@
 
         </section>
 
-        <!------------------- This is Latest Deals(L-D) Section  ------------------->
+
 
         <section class="latest-deals-section">
 
@@ -204,7 +203,7 @@
 
 
 
-        <!------------------- This is Customer Review(C-R) Section  ------------------->
+
 
         <section class="customer-review-section">
 
@@ -278,7 +277,7 @@
 
 
     <footer>
-        <!------------------- This is Footer Section  ------------------->
+        <!-- Footer Section -->
 
         <section class="footer-section">
 
