--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
     <title>EM Online Flower Shop</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/favicon/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
 
                 <div class="banner-image-area">
 
-                    <img class="banner-photo" src="assets/images/banner.png" alt="Banner Photo">
+                    <img class="banner-photo" src="img/images/banner.png" alt="Banner Photo">
 
                 </div>
 
@@ -64,7 +64,7 @@
 
                     <div class="f-f-image-text">
 
-                        <img class="f-f-photo f-f-photo-1" src="assets/images/feature-flw-1.png"
+                        <img class="f-f-photo f-f-photo-1" src="img/images/feature-flw-1.png"
                             alt="Featured Flower Photo">
                         <h4 class="f-f-image-title">Tulip Flower Tree</h4>
 
@@ -72,7 +72,7 @@
 
                     <div class="f-f-image-text">
 
-                        <img class="f-f-photo f-f-photo-2" src="assets/images/feature-flw-2.png"
+                        <img class="f-f-photo f-f-photo-2" src="img/images/feature-flw-2.png"
                             alt="Featured Flower Photo">
                         <h4 class="f-f-image-title">Sun Flower Tree</h4>
 
@@ -80,7 +80,7 @@
 
                     <div class="f-f-image-text">
 
-                        <img class="f-f-photo f-f-photo-3" src="assets/images/feature-flw-3.png"
+                        <img class="f-f-photo f-f-photo-3" src="img/images/feature-flw-3.png"
                             alt="Featured Flower Photo">
                         <h4 class="f-f-image-title">Yellow Flower Tree</h4>
 
@@ -99,22 +99,21 @@
 
                 <div class="d-l-s-icons">
 
-                    <img class="d-l-s-icon" src="assets/images/icon/delivery-man-1.svg" alt="Same Day Delivery Icon">
+                    <img class="d-l-s-icon" src="img/images/icon/delivery-man-1.svg" alt="Same Day Delivery Icon">
                     <p class="d-l-s-description description">Same Day Delivery. Click & Collect.</p>
 
                 </div>
 
                 <div class="d-l-s-icons">
 
-                    <img class="d-l-s-icon" src="assets/images/icon/flower-2.svg"
-                        alt="Fresh Flowers. Local Growers Icon">
+                    <img class="d-l-s-icon" src="img/images/icon/flower-2.svg" alt="Fresh Flowers. Local Growers Icon">
                     <p class="d-l-s-description description">Fresh Flowers. Local Growers.</p>
 
                 </div>
 
                 <div class="d-l-s-icons">
 
-                    <img class="d-l-s-icon" src="assets/images/icon/customer-service-3.svg" alt="24/7 Free Support">
+                    <img class="d-l-s-icon" src="img/images/icon/customer-service-3.svg" alt="24/7 Free Support">
                     <p class="d-l-s-description description">24/7 Free Support.</p>
 
                 </div>
@@ -140,7 +139,7 @@
 
                 <div class="h-d-images">
 
-                    <img class="h-d-photo" src="assets/images/hot-deal.png" alt="Hot Deal Background Image">
+                    <img class="h-d-photo" src="img/images/hot-deal.png" alt="Hot Deal Background Image">
 
                 </div>
 
@@ -163,10 +162,10 @@
 
                 <div class="insta-images">
 
-                    <img src="assets/images/instagram-1.png" alt="Instagram Photo" class="insta-photo">
-                    <img src="assets/images/instagram-2.png" alt="Instagram Photo" class="insta-photo">
-                    <img src="assets/images/instagram-3.png" alt="Instagram Photo" class="insta-photo">
-                    <img src="assets/images/instagram-4.png" alt="Instagram Photo" class="insta-photo">
+                    <img src="img/images/instagram-1.png" alt="Instagram Photo" class="insta-photo">
+                    <img src="img/images/instagram-2.png" alt="Instagram Photo" class="insta-photo">
+                    <img src="img/images/instagram-3.png" alt="Instagram Photo" class="insta-photo">
+                    <img src="img/images/instagram-4.png" alt="Instagram Photo" class="insta-photo">
 
                 </div>
 
@@ -216,12 +215,12 @@
 
                     <div class="c-r-card-container">
 
-                        <img class="c-r-image" src="assets/images/customer-1.jpg" alt="Customer Photo">
+                        <img class="c-r-image" src="img/images/customer-1.jpg" alt="Customer Photo">
                         <h3 class="c-r-name">Eleanor Crisp</h3>
                         <p class="c-r-profession">UX Designer</p>
 
                         <div class="white-bg">
-                            <img class="c-r-comment-icon" src="assets/images/icon/comment-icon.png" alt="comment-icon">
+                            <img class="c-r-comment-icon" src="img/images/icon/comment-icon.png" alt="comment-icon">
                             <p class="c-r-comment-description">Dad buried in landslide! Jubilant throngs fill streets!
                                 Stunned father inconsolable - demands recount!</p>
                         </div>
@@ -235,12 +234,12 @@
 
                     <div class="c-r-card-container">
 
-                        <img class="c-r-image" src="assets/images/customer-2.jpg" alt="Customer Photo">
+                        <img class="c-r-image" src="img/images/customer-2.jpg" alt="Customer Photo">
                         <h3 class="c-r-name">Gordon Norman</h3>
                         <p class="c-r-profession">Accountant</p>
 
                         <div class="white-bg">
-                            <img class="c-r-comment-icon" src="assets/images/icon/comment-icon.png" alt="comment-icon">
+                            <img class="c-r-comment-icon" src="img/images/icon/comment-icon.png" alt="comment-icon">
                             <p class="c-r-comment-description">Wormwood : Calvin, how about you? Calvin : Hard to say
                                 ma'am. I think my cerebellum has just fused.</p>
                         </div>
@@ -254,12 +253,12 @@
 
                     <div class="c-r-card-container">
 
-                        <img class="c-r-image" src="assets/images/customar-3.jpg" alt="Customer Photo">
+                        <img class="c-r-image" src="img/images/customar-3.jpg" alt="Customer Photo">
                         <h3 class="c-r-name">Sue Shei</h3>
                         <p class="c-r-profession">Public Relations</p>
 
                         <div class="white-bg">
-                            <img class="c-r-comment-icon" src="assets/images/icon/comment-icon.png" alt="comment-icon">
+                            <img class="c-r-comment-icon" src="img/images/icon/comment-icon.png" alt="comment-icon">
                             <p class="c-r-comment-description">The strength to change what I can, the inability to
                                 accept what I can't and the incapacity to tell the difference.</p>
                         </div>
